--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <title>Inscribe the planet</title>
+    <title>Koi Trading Inscribe</title>
     <style>
         * {
             box-sizing: border-box;
             font-size: 1.15rem;
             font-family: monospace;
-            background-color: black;
-            color: white;
+            background-color: white;
+            color: black;
         }
         html {
             max-width: 70ch;
@@ -48,7 +48,7 @@
             width: 100%;
             height: 1.8rem;
             font-size: 1.15rem;
-            border: 1px solid white;
+            border: 1px solid grey;
             margin-bottom: 10px;
         }
         .black-bg{
@@ -72,9 +72,9 @@
             width: 100%;
             max-width: 560px;
             max-height: 100vh;
-            background-color: white;
+            background-color: grey;
             padding: 20px;
-            color: black;
+            color: grey;
             text-align: center;
             border-radius: 25px;
             border: 2px solid var(--primary-color);
@@ -264,7 +264,7 @@
 </head>
 <body>
 
-<h1>Welcome to the online inscriber</h1>
+<h1>Welcome to the Koi Trading inscriber</h1>
 <h2 class="safari_warning">This tool may not work in safari browser. If you are using that, consider switching.</h2>
 <div id="setup">
 
